--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -488,12 +488,14 @@ body {
 	clear:both;
 	float:left;
 	margin-bottom:10px;
+	color: #00b7ff;
 }
 
 .you {
 	clear:both;
 	float:right;
 	margin-bottom:10px;
+	color: #5e85d2
 }
 
 .you .image{
@@ -515,7 +517,8 @@ body {
 	box-shadow: 0px 3px 3px #E3E4E6;
 	color: #637277;
 	line-height: 1.4;
-	word-wrap: break-word;
+	word-wrap: break-word;	
+	background: antiquewhite;
 }
 
 .chats .you p {
@@ -534,6 +537,7 @@ body {
 	color: #637277;
 	line-height: 1.4;
 	word-wrap: break-word;
+	background: snow;
 }
 
 .image b {
