--- a/views/chat.html
+++ b/views/chat.html
@@ -120,10 +120,11 @@
 	</section>
 
 	<footer>
-
+		<div id="typingDiv">
+			<div id="typing"></div>
+		</div>
 		<form id="chatform">
-
-			<textarea id="message" placeholder="Write something.."></textarea>
+			<textarea id="message" oninput="typing()" placeholder="Write something.."></textarea>
 			<input type="submit" id="submit" value="SEND"/>
 
 		</form>
@@ -134,7 +135,17 @@
 	<script src="../js/moment.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="../js/chat.js"></script>
-
+	<script>
+    // detect typing 
+	function typing(){
+		let data  = $("#message").val();
+		if(data){
+			$("#typing").html("You are typing...");
+		}else{
+			$("#typing").html("");
+		}
+	}
+	</script>
 </body>
 
 </html>
